# algorithms

./: algorithms.cabal  stack.yaml
app/: Main.hs  Pairwise.hs  Test.hs
app/week2/: FibLargeMod.hs  Gcd.hs  Lastdigitfib.hs  Lcm.hs  PartialSum.hs  Smallfib.hs  SumFibs.hs
app/week3/: Problem1.hs  Problem2.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs
app/week4/: Problem1.hs  Problem2.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs  \
app/week5/: Problem1.hs  Problem2.hs  Problem3.hs
