name:                algorithms
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/algorithms#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable main-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O -threaded -rtsopts -with-rtsopts=-N -main-is Main
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable test-exe
  hs-source-dirs:      app
  main-is:             Test.hs
  ghc-options:         -O -main-is Test
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010


executable pairwise-exe
  hs-source-dirs:      app
  main-is:             Pairwise.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Pairwise
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010


test-suite algorithms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , algorithms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/algorithms
