name:                algorithms
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/algorithms#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.5.1
  default-language:    Haskell2010

executable test-exe
  hs-source-dirs:      app
  main-is:             Test.hs
  ghc-options:         -O -main-is Test
  build-depends:       algorithms
                     , base
                     , containers >= 0.5.5.1
  default-language:    Haskell2010

executable pairwise-exe
  hs-source-dirs:      app
  main-is:             Pairwise.hs
  ghc-options:         -main-is Pairwise
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

-- WEEK 2                       
executable smallfib-exe
  hs-source-dirs:      app/week2
  main-is:             Smallfib.hs
  ghc-options:         -O -main-is Smallfib
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable lastdigitfib-exe
  hs-source-dirs:      app/week2
  main-is:             Lastdigitfib.hs
  ghc-options:         -O -main-is Lastdigitfib
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable gcd-exe
  hs-source-dirs:      app/week2
  main-is:             Gcd.hs
  ghc-options:         -O -main-is Gcd
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable lcm-exe
  hs-source-dirs:      app/week2
  main-is:             Lcm.hs
  ghc-options:         -O -main-is Lcm
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable fibmod-exe
  hs-source-dirs:      app/week2
  main-is:             FibLargeMod.hs
  ghc-options:         -O -main-is FibLargeMod
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable sumfib-exe
  hs-source-dirs:      app/week2
  main-is:             SumFibs.hs
  ghc-options:         -O -main-is SumFibs
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable partialsum-exe
  hs-source-dirs:      app/week2
  main-is:             PartialSum.hs
  ghc-options:         -O -main-is PartialSum
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

-- WEEK3
executable week3problem1-exe
  hs-source-dirs:      app/week3
  main-is:             Problem1.hs
  ghc-options:         -O -main-is Problem1
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable week3problem2-exe
  hs-source-dirs:      app/week3
  main-is:             Problem2.hs
  ghc-options:         -O -main-is Problem2
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable week3problem3-exe
  hs-source-dirs:      app/week3
  main-is:             Problem3.hs
  ghc-options:         -O -main-is Problem3
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable week3problem4-exe
  hs-source-dirs:      app/week3
  main-is:             Problem4.hs
  ghc-options:         -O -main-is Problem4
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable week3problem5-exe
  hs-source-dirs:      app/week3
  main-is:             Problem5.hs
  ghc-options:         -O -main-is Problem5
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable week3problem6-exe
  hs-source-dirs:      app/week3
  main-is:             Problem6.hs
  ghc-options:         -O -main-is Problem6
  build-depends:       base
                     , algorithms
  default-language:    Haskell2010

executable week4problem1-exe
  hs-source-dirs:      app/week4
  main-is:             Problem1.hs
  ghc-options:         -O -main-is Problem1
  build-depends:       algorithms
                     , base
                     , containers >= 0.5.5.1
  default-language:    Haskell2010


executable week4problem2-exe
  hs-source-dirs:      app/week4
  main-is:             Problem2.hs
  ghc-options:         -O -main-is Problem2
  build-depends:       algorithms
                     , base
                     , containers >= 0.5.5.1
  default-language:    Haskell2010

executable week4problem3-exe
  hs-source-dirs:      app/week4
  main-is:             Problem3.hs
  ghc-options:         -O -main-is Problem3
  build-depends:       algorithms
                     , base
                     , containers >= 0.5.5.1
  default-language:    Haskell2010



test-suite algorithms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , algorithms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/algorithms
